--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,8 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #4d8a7d;
+  background-color: #b7c9c5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,12 +23,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  justify-content: center;
-  align-items: center;
+ height: 100%;
 }
 
 h1 {
