--- a/src/assets/styles/List.css
+++ b/src/assets/styles/List.css
@@ -83,3 +83,19 @@
 .btn-delete:hover {
   background-color: #dc2626;
 }
+
+.create-btn {
+  padding: 8px 16px;
+  margin-bottom: 15px;
+  border-radius: 8px;
+  border: none;
+  background-color: #10b981;
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.create-btn:hover {
+  background-color: #059669;
+}
