--- a/src/assets/styles/Form.css
+++ b/src/assets/styles/Form.css
@@ -11,6 +11,7 @@
   padding: 35px;
   border-radius: 16px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+  color: #000000;
 }
 
 .form-card h2 {
@@ -93,7 +94,6 @@
   gap: 12px;
 }
 
-
 .color-input {
   width: 60px;
   height: 40px;
@@ -102,4 +102,3 @@
   background: none;
   cursor: pointer;
 }
-
