--- a/src/assets/styles/List.css
+++ b/src/assets/styles/List.css
@@ -1,18 +1,18 @@
-.category-container {
+.container {
   padding: 30px;
   font-family: Arial, Helvetica, sans-serif;
   display: grid;
   place-items: center;
 }
 
-.category-title {
+.title {
   margin-bottom: 20px;
   font-size: 30px;
   font-weight: bold;
   color: #1b1b1b;
 }
 
-.category-table {
+.table {
   width: 100%;
   border-collapse: collapse;
   background: white;
@@ -21,23 +21,23 @@
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
 }
 
-.category-table thead {
+.table thead {
   background-color: #73e546;
   color: white;
 }
 
-.category-table th,
-.category-table td {
+.table th,
+.table td {
   padding: 12px 16px;
   text-align: left;
   color: #333;
 }
 
-.category-table tbody tr:hover {
+.table tbody tr:hover {
   background-color: #f3f4f6;
 }
 
-.category-color-box {
+.color-box {
   width: 20px;
   height: 20px;
   border-radius: 5px;
