--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -32,3 +32,18 @@
 .nav-links .active {
   color: #46e55b;
 }
+
+.nav-user {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.btn-logout {
+  background-color: #0c3a53;
+  border: 1px solid #6d6d6d;
+  color: white;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
